--- a/references.bib
+++ b/references.bib
@@ -1,25 +1,33 @@
-@article{einstein,
-    author        = {Albert Einstein},
-    title         = {Zur Elektrodynamik bewegter K{\"o}rper. (German) [On the electrodynamics of moving bodies]},
-    journaltitle  = {Annalen der Physik},
-    year          = {1905},
-    volume        = {322},
-    number        = {10},
-    pages         = {891-921},
-    doi           = {http://dx.doi.org/10.1002/andp.19053221004}
+
+
+@book{zarchan2007tactical,
+  title={Tactical and Strategic Missile Guidance},
+  author={Zarchan, P.},
+  number={v. 219},
+  series={AIAA Tactical Missile Series},
+  
+  year={2007},
+  publisher={American Institute of Aeronautics and Astronautics}
 }
 
-@online{knuthwebsite,
-    author        = {Donald Knuth},
-    title         = {Knuth: Computers and Typesetting},
-    year          = {1984},
-    url           = {http://www-cs-faculty.stanford.edu/~uno/abcde.html}
+@book{yanushevsky2007modern,
+  title={Modern Missile Guidance},
+  author={Yanushevsky, R.},
+  year={2007},
+  publisher={Taylor \& Francis}
 }
 
-@book{latexcompanion,
-    author        = {Michel Goossens and Frank Mittelbach and Alexander Samarin},
-    title         = {The \LaTeX\ Companion},
-    year          = {1993},
-    publisher     = {Addison-Wesley},
-    location      = {Reading, Massachusetts}
+@book{siriouis2007,
+title={Missile Guidance and Control Systems},
+author={George M. Siouris},
+year={2004},
+publisher      = {Springer-Verlag New York}
+
+}
+
+@book{shneydor1998missile,
+  title={Missile Guidance and Pursuit: Kinematics, Dynamics and Control},
+  author={Shneydor, N.A.},
+  year={1998},
+  publisher={Elsevier Science}
 }
