--- a/title.tex
+++ b/title.tex
@@ -25,8 +25,8 @@
         
         \vspace{0.8cm}
         
-        \Large
-        A thesis presented for the degree of Doctor of Philosophy
+        %\Large
+        %A thesis presented for the degree of Doctor of Philosophy
         
         \vspace{0.5cm}
         
@@ -37,7 +37,7 @@
 	    \begin{flushright}
 	
 	    \Large
-	    Date
+	%    \date{Oktobar, 2020}
 	
 	    \end{flushright}
         
