--- a/main.tex
+++ b/main.tex
@@ -62,9 +62,14 @@
 %\listoftables
 
 %\input{abstract}
-
 \chapter[]{Uvod}
 \input{Chapters/introduction}
+
+\chapter{Koordinatni sistemi}
+\input{Chapters/KS.tex}
+
+
+\chapter{Dinamički model}
 
 \chapter{Uvod u proporcionalnu navigaciju}
 \input{Chapters/chapter02.tex}
