started equations of motion

--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,8 @@
 \usepackage{xcolor}
 \usepackage{tcolorbox}
 \usepackage{draftwatermark}
+\usepackage{nccmath}
+
 \pagestyle{fancy}
 \fancyhead{}
 \fancyhead[RO,LE]{Proporcionalna navigacija i upravljanje kretanja projektila}
@@ -36,7 +38,6 @@
 %\doublespacing
 %\setstretch{1.1}
 \hbadness=99999
-
 \usepackage{titlesec,blindtext,color}
 
 \definecolor{gray75}{gray}{0.75}
@@ -54,18 +55,16 @@
 
 %\chapter*{Acknowledgements}
 %I want to thank...
-
 \tableofcontents
 
 %\listoffigures
-
 %\listoftables
-
 %\input{abstract}
+
 \chapter[]{Uvod}
 \input{Chapters/introduction}
 
-\chapter{Koordinatni sistemi}
+\chapter{Jednačine kretanja tijela}
 \input{Chapters/KS.tex}
 
 
