--- a/references.bib
+++ b/references.bib
@@ -29,5 +29,6 @@ publisher      = {Springer-Verlag New York}
   title={Missile Guidance and Pursuit: Kinematics, Dynamics and Control},
   author={Shneydor, N.A.},
   year={1998},
-  publisher={Elsevier Science}
+  publisher={Elsevier Science},
+  number={1}
 }
