done for the day

--- a/references.bib
+++ b/references.bib
@@ -32,3 +32,12 @@ publisher      = {Springer-Verlag New York}
   publisher={Elsevier Science},
   number={1}
 }
+
+@book{drela2014flight,
+  title={Flight Vehicle Aerodynamics},
+  author={Drela, M.},
+  series={FLIGHT VEHICLE AERODYNAMICS},
+  year={2014},
+  publisher={MIT Press}
+}
+
