--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 \usepackage{xcolor}
 \usepackage{tcolorbox}
 \usepackage{draftwatermark}
-\usepackage{nccmath}
+\usepackage{amsmath,tabstackengine}
 
 \pagestyle{fancy}
 \fancyhead{}
