--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@
 %I want to thank...
 \tableofcontents
 
-%\listoffigures
+\listoffigures
 %\listoftables
 %\input{abstract}
 
@@ -68,10 +68,12 @@
 \input{Chapters/KS.tex}
 
 
-\chapter{Dinamički model}
+\chapter{Sile koje djeluju na projektil}
+\input{Chapters/Sile.tex}
 
 \chapter{Uvod u proporcionalnu navigaciju}
 \input{Chapters/chapter02.tex}
+
 
 
 \nocite{*}
