--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@
 % https://en.wikibooks.org/wiki/LaTeX/Text_Formatting#Line_Spacing
 \usepackage{setspace}
 \singlespacing
-%\onehalfspacing
+\onehalfspacing
 %\doublespacing
 %\setstretch{1.1}
 \hbadness=99999
