--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 \usepackage{fancyhdr}
 \usepackage{xcolor}
 \usepackage{tcolorbox}
-\usepackage{draftwatermark}
+%\usepackage{draftwatermark}
 \usepackage{amsmath,tabstackengine}
 \usepackage[section]{placeins}
 \usepackage{tikz}
@@ -31,8 +31,8 @@
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
 
-\SetWatermarkText{Nedovršeno}
-\SetWatermarkScale{1}
+%\SetWatermarkText{Nedovršeno}
+%\SetWatermarkScale{1}
 % https://en.wikibooks.org/wiki/LaTeX/Floats,_Figures_and_Captions
 \usepackage{caption}
 \usepackage{subcaption}
