--- a/main.tex
+++ b/main.tex
@@ -89,8 +89,13 @@ pinstyle/.style = {pin edge={to-,thin,black}
 \chapter{Sile koje djeluju na projektil}
 \input{Chapters/Sile.tex}
 
+\chapter{Dinamički model}
+\input{Chapters/model.tex}
+
 \chapter{Uvod u proporcionalnu navigaciju}
 \input{Chapters/chapter02.tex}
+
+
 
 \nocite{*}
 \printbibliography
