--- a/references.bib
+++ b/references.bib
@@ -5,7 +5,6 @@
   author={Zarchan, P.},
   number={v. 219},
   series={AIAA Tactical Missile Series},
-  
   year={2007},
   publisher={American Institute of Aeronautics and Astronautics}
 }
@@ -40,4 +39,12 @@ publisher      = {Springer-Verlag New York}
   year={2014},
   publisher={MIT Press}
 }
+
+@book{graovac2005automatsko,
+  title={Automatsko vo{\dj}enje objekata u prostoru},
+  author={Graovac, S.},  
+  year={2005},
+  publisher={Akademska misao}
+}
+
 
