--- a/main.tex
+++ b/main.tex
@@ -95,7 +95,8 @@ pinstyle/.style = {pin edge={to-,thin,black}
 \chapter{Uvod u proporcionalnu navigaciju}
 \input{Chapters/chapter02.tex}
 
-
+\chapter{Sinteza autopilota}
+\input{Chapters/autopilot.tex}
 
 \nocite{*}
 \printbibliography
