--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{lmodern}
 \usepackage{csquotes}
+\usepackage[framed,numbered,autolinebreaks,useliterate]{mcode}
 \usetikzlibrary{shapes,arrows,positioning,calc}
 
 
