--- a/abstract.tex
+++ b/abstract.tex
@@ -1,17 +1,24 @@
 \thispagestyle{plain}
 \begin{center}
     \Large
-    \textbf{Thesis Title}
+    \textbf{Principi vođenja i upravljanja taktičkih projektila kratkog dometa}
     
     \vspace{0.4cm}
-    \large
-    Thesis Subtitle
-    
+        
     \vspace{0.4cm}
-    \textbf{Author Name}
+    \textbf{Mirza Hodžić}
     
     \vspace{0.9cm}
-    \textbf{Abstract}
+    \textbf{Sažetak}
 \end{center}
 
-\lipsum[1-3]
+Većina savremenih taktičkih projektila su samonavođeni projektili (fire and forget). Za
+osiguranje visoke performanse neophodan je kvalitetan sistem vođenja (guidance) i
+upravljanja (control) projektila. Kretanjem projektila pod dejstvom pogonskih (raketni
+motor), reaktivnih i upravljačkih (aerodinamičke) sila mijenjaju se njegovi prostorni
+kinematski odnosi u odnosu na cilj. Sistem vođenja registruje te promjene i u odnosu na dati
+zadatak i usvojeni zakon viđenja formira grešku vođenja. Tačnost sistema vođenja zavisi od
+senzorskog sistema i sistema za praćenje cilja (target tracker, target seeker). Signal greške
+vođenja predstavlja referentnu ulaznu vrijednost za sistem za upravljanje kretanjem projektila
+(autopilot) koji nastoji da smanji grešku vođenja. Tačnost autopilota zavisi od primijenjenih
+senzora kretanja i zakona upravljanja.
