--- a/main.tex
+++ b/main.tex
@@ -67,8 +67,8 @@ pinstyle/.style = {pin edge={to-,thin,black}
 }
 \input{title}
 
-%\chapter*{Dedication}
-%To mum and dad...
+\chapter*{Posveta}
+Mojim roditeljima
 
 %\chapter*{Declaration}
 %I declare that..
@@ -77,12 +77,13 @@ pinstyle/.style = {pin edge={to-,thin,black}
 %I want to thank...
 \tableofcontents
 
-\listoffigures
+%\listoffigures
 %\listoftables
-%\input{abstract}
+\newpage
+\input{abstract}
 
-\chapter[]{Uvod}
-\input{Chapters/introduction}
+%\chapter[]{Uvod}
+%\input{Chapters/introduction}
 
 \chapter{Jednačine kretanja tijela}
 \input{Chapters/KS.tex}
