--- a/title.tex
+++ b/title.tex
@@ -3,7 +3,7 @@
         \vspace*{1cm}
         
         \Huge
-        \textbf{Navigacija i upravljanje projektila}
+        \textbf{Principi vođenja i upravljanja taktičkih projektila kratkog dometa}
         
         %\vspace{0.5cm}
         
