--- a/main.tex
+++ b/main.tex
@@ -100,6 +100,16 @@ Mojim roditeljima
 
 \chapter{Sinteza autopilota}
 \input{Chapters/autopilot.tex}
+\chapter{Zaključak}
+Za razumijevanje problematike vođenja projektila potrebo je više koordinatnih sistema. 
+Ostvaren je model projektila sa šest stepeni slobode u koordinatnom sistemu tijela. 
+Model projektila se sastoji iz tri nezavisna kanala: kanal visine, kanal pravca i kanal valjanja.
+Pokazano je da moguće ostvariti vođenje projektila ka meti regulacijom kanala visine i pravca i 
+stabilizacijom kanala valjanja. Za vođenje projektil koristi se zakon proporcionalne navigacije 
+koji generiše ubrzanja u referentnom sistemu koji garantuju da će se projektil susresti sa metom.
+Prikazan je potpun sistem vođenja zajedno sa autopilotom i pokazano je da 
+se ostvaruje pogodak čak i ako postoji razumna početna greška nišanjenja. 
+
 
 \nocite{*}
 \printbibliography
