--- a/references.bib
+++ b/references.bib
@@ -47,4 +47,14 @@ publisher      = {Springer-Verlag New York}
   publisher={Akademska misao}
 }
 
+@book{prljaca,
+author={N. Prljača, Z. Šehič},
+title={Automatsko Upravljanje},
+year={2008},
+publisher = {Tuzla}
+
+
+
+}
+
 
