--- a/title.tex
+++ b/title.tex
@@ -17,7 +17,7 @@
         
         \vspace{0.5cm}
         
-        Mentor: prof. dr. Naser Prljača\\
+        \textbf{Mentor: prof. dr. Naser Prljača}\\
         
         \vfill
         
