--- a/main.tex
+++ b/main.tex
@@ -25,7 +25,7 @@
 
 \pagestyle{fancy}
 \fancyhead{}
-\fancyhead[RO,LE]{Proporcionalna navigacija i upravljanje kretanja projektila}
+\fancyhead[RO,LE]{Principi vođenja i upravljanja taktičkih projektila kratkog dometa}
 \setlength{\headheight}{15pt}
 \fancyfoot{}
 \fancyfoot[CO,RE]{\thepage}
